<resources>
    <string name="app_name">Find My Farmer</string>
    <string name="input_email_hint">Email</string>
    <string name="input_password_hint">Password</string>
    <string name="login_btn">Log In</string>
    <string name="register_link">Don\'t have an account?</string>
    <string name="register_btn">Sign Up</string>
    <string name="forgot_password_link"><u>Forgot Password?</u></string>
    <string name="facebook_app_id">1553403721513069</string>
    <string name="fb_login_protocol_scheme">fb1553403721513069</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reset_password_title">Forgot your password?</string>
    <string name="reset_password_instructionLine1">Forgot your password?
        \nEnter your registered email
        \nReset link will be sent to you</string>
    <string name="reset_password_instructionLine2">We will send you a password reset</string>
    <string name="navigation_drawer_open">Open Navigation</string>
    <string name="navigation_drawer_close">Close Navigation</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="are_you_farmer">Are you a farmer?</string>
    <string name="next">Next</string>
    <string name="in_the_farm_page_look_for_a_the_add_button_add_the_current_information_of_said_product_with_quantities">In the farm page, look for a the add button. Add thecurrent infomration of said product with quantities</string>
    <string name="how_to_add_items">How to add items?</string>
    <string name="help">Help</string>
    <string name="go_to_hub_tab_press_the_plus_button_and_the_information_of_farm">Go to Hub tab, press the plus button and the information of farm?</string>
    <string name="how_to_manage_farms">How to manage farms?</string>
    <string name="faq">FAQ</string>
    <string name="contact_us">Contact Us</string>
    <string name="_905_768_7654">(905)-768-7654</string>
    <string name="support_findmyfarmer_org">support@findmyfarmer.org</string>

    <string-array name="Product_Status">
        <item>IN STOCK</item>
        <item>OUT OF STOCK </item>
        <item>LOW QUANTITY</item>
    </string-array>
</resources>
